Prevent scrollbar when browsing deep categories

--- a/web/css/layout/_breadcrumbs.less
+++ b/web/css/layout/_breadcrumbs.less
@@ -3,6 +3,7 @@
         ul {
             &:extend(.container);
             display: flex;
+            flex-wrap: wrap;
             gap: @2;
         }
         li {
